Add .pre class for wiki

--- a/src/sass/wiki/_code.scss
+++ b/src/sass/wiki/_code.scss
@@ -2,3 +2,9 @@ pre {
 	padding: $spacer;
 	background-color: $gray-100;
 }
+
+// When you don't want to escape wiki code inside <pre>, you can use
+// <div class="pre"></div> instead.
+.pre {
+  @extend pre;
+}
