--- a/src/sass/wiki/_index.scss
+++ b/src/sass/wiki/_index.scss
@@ -12,6 +12,7 @@ body.mediawiki {
   @import "input";
   @import "list";
   @import "preference";
+  @import "print";
   @import "search";
   @import "sidebar";
   @import "table";
