--- a/src/sass/wiki/_print.scss
+++ b/src/sass/wiki/_print.scss
@@ -1,7 +1,7 @@
 @media print {
   #main-wrap {
     > .row {
-      display: block;
+      display: block !important;
 
       > .col-12 {
         width: auto !important;
