--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,3 +1,13 @@
+// Headings margin
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 1em;
+}
+
 // Use smaller font sizes for smart phone
 @include media-breakpoint-down(sm) {
   .display-1 {
