--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,1 +1,78 @@
+// https://github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss
+
 $font-path: "../fonts" !default;
+
+// openSUSE Brand Colors
+$opensuse-green: #73ba25;
+$opensuse-dark: #173f4f;
+$opensuse-cyan: #35b9ab;
+$opensuse-cyan2: #00a489;
+$opensuse-green2: #6da741;
+$opensuse-blue: #21a4df;
+
+$white: #ffffff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #868e96;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000000;
+
+$blue: #007bff;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #28a745;
+$teal: #20c997;
+$cyan: #17a2b8;
+
+// Bootstrap colors
+$primary: $opensuse-cyan;
+//$secondary: $gray-600;
+$success: $opensuse-green;
+$info: $opensuse-blue;
+//$warning  : $yellow;
+//$danger   : $red;
+//$light    : $gray-100;
+$dark: $opensuse-dark;
+
+// Body background
+$body-bg: #ffffff;
+$body-color: #000000;
+
+// Links
+$link-color: $opensuse-cyan2;
+$link-hover-decoration: none;
+
+// Fonts
+$font-family-sans-serif: "Open Sans", sans-serif;
+$font-family-serif: "Source Serif", serif;
+$font-family-monospace: "Source Code Pro", monospace;
+$font-size-base: 1rem;
+
+// Headings
+$headings-margin-bottom: 1em;
+$headings-font-family: "Open Sans Condensed", "Open Sans", sans-serif;
+$headings-font-weight: bold;
+
+$h1-font-size: $font-size-base * 3.5;
+$h2-font-size: $font-size-base * 2.5;
+$h3-font-size: $font-size-base * 1.5;
+$h4-font-size: $font-size-base * 1.25;
+$h5-font-size: $font-size-base;
+$h6-font-size: $font-size-base * 0.5;
+
+$display1-size: $font-size-base * 6;
+$display2-size: $font-size-base * 5.5;
+$display3-size: $font-size-base * 4.5;
+$display4-size: $font-size-base * 3.5;
+
+// Table
+$table-border-color: $gray-400;
