--- a/src/pug/components/doc-header.pug
+++ b/src/pug/components/doc-header.pug
@@ -1,5 +1,5 @@
 header.bg-dark.text-light.py-5.text-center
   .container
-    block header
-      h1.display-1= (title || 'Chameleon').toUpperCase()
-      p.lead= description || 'the openSUSE web design'
+    h1#doc-title
+      .d-inline-block.bg-light.text-dark.px-2 CHAMELEON
+    p.lead web theme for openSUSE
