--- a/src/pug/components/doc-navbar.pug
+++ b/src/pug/components/doc-navbar.pug
@@ -1,4 +1,4 @@
-nav#doc-navbar.navbar.navbar-dark.bg-dark
+nav#doc-navbar.d-flex.justify-content-center.bg-dark.text-light
   ul.nav.nav-pills
 
     li.nav-item
