--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -47,11 +47,13 @@ block content
     a(href="https://opensuse.github.io/branding-guidelines/") openSUSE Brand Guidelines
     | .
 
-  h3#colors Colors
-
-  h3#fonts Fonts
-
-  h3#icons Icons
+  p
+    | Here is a
+    |
+    a(href="https://opensuse.eosdesignsystem.com/") design system
+    |
+    | for openSUSE under development. We are looking forward to adopt it into
+    | Chameleon.
 
   h2#usability-accessibility Usability &amp; accessibility
 
@@ -79,15 +81,13 @@ block content
     a(href="https://getbootstrap.com/") Bootstrap
     | .
 
-  p Avoid using too many color variants.
+  h3#buttons Buttons
 
-  h3#button
+  include ../sections/buttons.pug
 
-  p
-    button.btn.btn-primary Primary
-    |
-    |
-    button.btn.btn-secondary Secondary
+  h3#inputs Inputs
+
+  include ../sections/inputs.pug
 
   h2#examples Examples
 
