--- a/src/pug/components/doc-footer.pug
+++ b/src/pug/components/doc-footer.pug
@@ -1,3 +1,3 @@
 #footer.text-center.py-5.bg-dark.text-light
   .container
-    p &copy; 2017-2019 Guo Yunhe. GPLv3
+    p &copy; 2017-#{new Date().getFullYear()} Guo Yunhe. GPLv3
