--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -35,7 +35,7 @@ $cyan: #17a2b8;
 
 // Bootstrap colors
 $primary: $opensuse-cyan;
-//$secondary: $gray-600;
+$secondary: $gray-300;
 $success: $opensuse-green;
 $info: $opensuse-blue;
 //$warning  : $yellow;
@@ -49,7 +49,25 @@ $body-color: #000000;
 
 // Links
 $link-color: $opensuse-cyan2;
-$link-hover-decoration: none;
+
+// Options
+
+$enable-caret: true;
+$enable-rounded: false;
+$enable-shadows: false;
+$enable-gradients: false;
+$enable-transitions: true;
+$enable-prefers-reduced-motion-media-query: true;
+$enable-grid-classes: true;
+$enable-pointer-cursor-for-buttons: true;
+$enable-print-styles: true;
+$enable-responsive-font-sizes: true;
+$enable-validation-icons: true;
+$enable-deprecation-messages: true;
+
+// Components
+
+$border-width: 2px;
 
 // Fonts
 $font-family-sans-serif: "Open Sans", sans-serif;
@@ -64,7 +82,7 @@ $headings-font-weight: bold;
 
 $h1-font-size: $font-size-base * 3.5;
 $h2-font-size: $font-size-base * 2.5;
-$h3-font-size: $font-size-base * 1.5;
+$h3-font-size: $font-size-base * 1.75;
 $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base;
 $h6-font-size: $font-size-base * 0.5;
