--- a/src/pug/components/theme-doc-header.pug
+++ b/src/pug/components/theme-doc-header.pug
@@ -1,5 +1,5 @@
-header.bg-dark.text-light.py-5.text-center
+header#theme-doc-header.bg-dark.text-light.py-5.text-center
   .container
-    h1#doc-title
+    h1#theme-doc-title
       .d-inline-block.bg-light.text-dark.px-2 CHAMELEON
     p.lead web theme for openSUSE
