--- a/src/pug/components/theme-doc-navbar.pug
+++ b/src/pug/components/theme-doc-navbar.pug
@@ -1,4 +1,4 @@
-nav#doc-navbar.d-flex.justify-content-center.bg-dark.text-light
+nav#theme-doc-navbar.d-flex.justify-content-center.bg-dark.text-light
   ul.nav.nav-pills
 
     li.nav-item
@@ -12,6 +12,9 @@ nav#doc-navbar.d-flex.justify-content-center.bg-dark.text-light
 
     li.nav-item
       a.nav-link(href="#components") Components
+
+    li.nav-item
+      a.nav-link(href="#graphics") Graphics
 
     li.nav-item
       a.nav-link(href="#examples") Examples
