--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,4 +1,4 @@
-extends ../layouts/doc.pug
+extends ../layouts/theme-doc.pug
 
 block variables
 
@@ -88,6 +88,10 @@ block content
   h3#inputs Inputs
 
   include ../sections/inputs.pug
+
+  h2#graphics Graphics
+
+  include ../sections/graphics.pug
 
   h2#examples Examples
 
