--- a/src/pug/sections/graphics.pug
+++ b/src/pug/sections/graphics.pug
@@ -17,46 +17,46 @@ table.table
   tbody
     tr
       td
-        img(src="/dist/images/app-icons/www-16.svg" width="16" height="16" alt="www icon")
+        img(src="./dist/images/app-icons/www-16.svg" width="16" height="16" alt="www icon")
       td
-        img(src="/dist/images/app-icons/www.svg" width="32" height="32" alt="www icon")
+        img(src="./dist/images/app-icons/www.svg" width="32" height="32" alt="www icon")
       td
-        img(src="/dist/images/app-icons/www.svg" width="64" height="64" alt="www icon")
+        img(src="./dist/images/app-icons/www.svg" width="64" height="64" alt="www icon")
       td www.opensuse.org
       td Home page icon
     tr
       td
-        img(src="/dist/images/app-icons/software-16.svg" width="16" height="16" alt="software icon")
+        img(src="./dist/images/app-icons/software-16.svg" width="16" height="16" alt="software icon")
       td
-        img(src="/dist/images/app-icons/software.svg" width="32" height="32" alt="software icon")
+        img(src="./dist/images/app-icons/software.svg" width="32" height="32" alt="software icon")
       td
-        img(src="/dist/images/app-icons/software.svg" width="64" height="64" alt="software icon")
+        img(src="./dist/images/app-icons/software.svg" width="64" height="64" alt="software icon")
       td software.opensuse.org
       td Software search engine icon
     tr
       td
-        img(src="/dist/images/app-icons/wiki-16.svg" width="16" height="16" alt="wiki icon")
+        img(src="./dist/images/app-icons/wiki-16.svg" width="16" height="16" alt="wiki icon")
       td
-        img(src="/dist/images/app-icons/wiki.svg" width="32" height="32" alt="wiki icon")
+        img(src="./dist/images/app-icons/wiki.svg" width="32" height="32" alt="wiki icon")
       td
-        img(src="/dist/images/app-icons/wiki.svg" width="64" height="64" alt="wiki icon")
+        img(src="./dist/images/app-icons/wiki.svg" width="64" height="64" alt="wiki icon")
       td en.opensuse.org
       td Wiki icon
     tr
       td
-        img(src="/dist/images/app-icons/forum-16.svg" width="16" height="16" alt="forum icon")
+        img(src="./dist/images/app-icons/forum-16.svg" width="16" height="16" alt="forum icon")
       td
-        img(src="/dist/images/app-icons/forum.svg" width="32" height="32" alt="forum icon")
+        img(src="./dist/images/app-icons/forum.svg" width="32" height="32" alt="forum icon")
       td
-        img(src="/dist/images/app-icons/forum.svg" width="64" height="64" alt="forum icon")
+        img(src="./dist/images/app-icons/forum.svg" width="64" height="64" alt="forum icon")
       td forums.opensuse.org
       td Forum icon
     tr
       td
-        img(src="/dist/images/app-icons/build-16.svg" width="16" height="16" alt="obs icon")
+        img(src="./dist/images/app-icons/build-16.svg" width="16" height="16" alt="obs icon")
       td
-        img(src="/dist/images/app-icons/build.svg" width="32" height="32" alt="obs icon")
+        img(src="./dist/images/app-icons/build.svg" width="32" height="32" alt="obs icon")
       td
-        img(src="/dist/images/app-icons/build.svg" width="64" height="64" alt="obs icon")
+        img(src="./dist/images/app-icons/build.svg" width="64" height="64" alt="obs icon")
       td build.opensuse.org
       td OBS icon
