--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -85,7 +85,7 @@ $h2-font-size: $font-size-base * 2.5;
 $h3-font-size: $font-size-base * 1.75;
 $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base;
-$h6-font-size: $font-size-base * 0.5;
+$h6-font-size: $font-size-base;
 
 $display1-size: $font-size-base * 6;
 $display2-size: $font-size-base * 5.5;
