--- a/src/pug/layouts/theme-doc.pug
+++ b/src/pug/layouts/theme-doc.pug
@@ -6,7 +6,8 @@ block variables
 html(lang="en")
   head
     title= title + ' - ' + subtitle
-    link(href="./dist/images/app-icons/www-16.svg", rel="shortcut icon", type="image/svg")
+    link(href="./dist/images/app-icons/www-16.png", rel="icon", sizes="16x16" type="image/png")
+    link(href="./dist/images/app-icons/www.png", rel="icon", sizes="256x256" type="image/png")
     link(href="./dist/css/chameleon.css", rel="stylesheet")
     link(href="./dist/css/theme-doc.css", rel="stylesheet")
     link(href="./lib/highlight-github.css", rel="stylesheet")
