Wiki navs style

--- a/src/sass/wiki/_index.scss
+++ b/src/sass/wiki/_index.scss
@@ -10,6 +10,7 @@ body.mediawiki {
   @import "image";
   @import "input";
   @import "list";
+  @import "navs";
   @import "preference";
   @import "print";
   @import "search";
