--- a/src/sass/wiki/_navs.scss
+++ b/src/sass/wiki/_navs.scss
@@ -6,10 +6,17 @@ ul.nav {
 }
 
 // Link inside nav link span (wiki text doesn't support class of internal and external link)
-.nav-link a {
-  display: block;
-  color: inherit;
-  text-decoration: none;
-  margin: -0.375rem -0.75rem;
-  padding: 0.375rem 0.75rem;
+.nav-link {
+  a {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    margin: -0.375rem -0.75rem;
+    padding: 0.375rem 0.75rem;
+  }
+
+  strong.selflink {
+    font-weight: inherit;
+    user-select: none;
+  }
 }
