--- a/src/pug/sections/inputs.pug
+++ b/src/pug/sections/inputs.pug
@@ -8,10 +8,6 @@ p
   input.form-control.mb-3(type="text" placeholder="Text input")
   textarea.form-control(placeholder="Textarea")
 
-.bg-dark.text-light.mb-3.p-3
-  input.form-control.mb-3(type="text" placeholder="Text input")
-  textarea.form-control(placeholder="Textarea")
-
 h4 Cunstom inputs
 
 p Selects, checkboxs, radio buttons and file inputs should use custom control.
@@ -39,25 +35,9 @@ p Selects, checkboxs, radio buttons and file inputs should use custom control.
     input#custom-file-1.custom-file-input(type="file")
     label.custom-file-label(for="custom-file-1") Choose file
 
-.bg-dark.text-light.mb-3.p-3
-  .custom-control.custom-checkbox.mb-3
-    input#custom-check-3.custom-control-input(type="checkbox" checked)
-    label.custom-control-label(for="custom-check-3") Checkbox 1
-  .custom-control.custom-checkbox.mb-3
-    input#custom-check-4.custom-control-input(type="checkbox")
-    label.custom-control-label(for="custom-check-4") Checkbox 2
-  .custom-control.custom-radio.mb-3
-    input#custom-radio-3.custom-control-input(type="radio" name="custom-radio-2" value="1" checked)
-    label.custom-control-label(for="custom-radio-3") Radio button 1
-  .custom-control.custom-radio.mb-3
-    input#custom-radio-4.custom-control-input(type="radio" name="custom-radio-2" value="2")
-    label.custom-control-label(for="custom-radio-4") Radio button 2
-  select.custom-select.mb-3
-    option gedit
-    option emacs
-    option kate
-    option(selected) nano
-    option vim
-  .custom-file
-    input#custom-file-1.custom-file-input(type="file")
-    label.custom-file-label(for="custom-file-1") Choose file
+h4 Dark mode switch
+
+.my-3
+  .custom-control.custom-switch.dark-mode-switch
+    input#switch1.custom-control-input(type="checkbox")
+    label.custom-control-label(for="switch1") Dark Mode
