Cross-site and per-site navbar

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,4 +1,4 @@
-extends ../layouts/theme-doc.pug
+extends ../layouts/theme.pug
 
 block variables
 
@@ -96,3 +96,13 @@ block content
   h2#examples Examples
 
   p We made some examples of how to use Chameleon theme in web applications.
+
+  ul
+    li
+      a(href="./www.html") www.opensuse.org
+    li
+      a(href="./software.html") software.opensuse.org
+    li
+      a(href="./wiki.html") wiki.opensuse.org
+    li
+      a(href="./forum.html") forum.opensuse.org
