--- a/src/sass/_selection-color.scss
+++ b/src/sass/_selection-color.scss
@@ -1,9 +1,9 @@
 ::selection {
-    background: $opensuse-cyan; /* WebKit/Blink Browsers */
-    color: $white;
+  background: $cyan; /* WebKit/Blink Browsers */
+  color: $white;
 }
 
 ::-moz-selection {
-    background: $opensuse-cyan; /* Gecko Browsers */
-    color: $white;
+  background: $cyan; /* Gecko Browsers */
+  color: $white;
 }
