--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -19,8 +19,7 @@
 @import "carousel";
 
 // Universal styles for all sites
-@import "global-navbar";
-@import "site-navbar";
+@import "navbar";
 @import "footer";
 
 @import "wiki/index";
