--- a/src/pug/pages/wiki.pug
+++ b/src/pug/pages/wiki.pug
@@ -6,7 +6,7 @@ block variables
 
 block content
 
-  #site-navbar
+  nav#site-navbar
 
     a#site-brand(href="#")
       img#site-logo(src="dist/images/logo/logo-white.svg")
