New site footer

--- a/src/pug/components/example-navbar.pug
+++ b/src/pug/components/example-navbar.pug
@@ -3,8 +3,8 @@ nav#cross-site-navbar
     a.l10n(href="www.html" data-msg-id="main") Main
     a.l10n(href="software.html" data-msg-id="software") Software
     a.l10n(href="doc.html" data-msg-id="documentation") Documentation
-    a.l10n(href="wiki.html" data-msg-id="wiki") Wiki
-    a.l10n(href="forum.html" data-msg-id="forum") Forum
+    a.l10n(href="wiki.html" data-msg-id="wiki" data-url-id="wiki-url") Wiki
+    a.l10n(href="forum.html" data-msg-id="forum" data-url-id="forum-url") Forum
     a.l10n(href="build.html" data-msg-id="build-service") Build Service
     a(href="build.html") Bugzilla
     a.l10n(href="#" data-msg-id="more") more
