--- a/src/pug/pages/wiki.pug
+++ b/src/pug/pages/wiki.pug
@@ -18,8 +18,9 @@ block content
       a(href="#") FAQ
       a(href="#") Help
 
-    form#site-search
-      input.form-control.form-control-sm(type="search" placeholder="Search wiki...")
+    #site-search
+      form
+        input.form-control.form-control-sm(type="search" placeholder="Search wiki...")
 
     .space
 
