--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -115,6 +115,10 @@
     justify-content: center;
     align-items: center;
     margin: 0;
+
+    form {
+      margin: 0;
+    }
   }
 
   .space {
