--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,3 +1,4 @@
+// Deprecated
 .global-footer {
   @extend .clearfix;
   margin-top: 30px;
@@ -13,5 +14,18 @@
     @include media-breakpoint-down(sm) {
       display: block;
     }
+  }
+}
+
+#site-footer {
+  @extend .clearfix;
+
+  margin-top: 30px;
+  padding: 30px 0;
+  color: $gray-600;
+  background: $gray-100;
+
+  body.bg-dark & {
+    background: $gray-800;
   }
 }
