--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -16,7 +16,6 @@
   $height: 1.5rem;
   display: flex;
   height: $height;
-  overflow: hidden;
   font-size: $font-size-sm;
   background: $gray-900;
   color: $gray-400;
@@ -24,20 +23,31 @@
   > .sites {
     display: flex;
     flex: 1 1 auto;
+  }
 
-    > a {
-      display: block;
-      padding: 0 15px;
-      height: $height;
-      line-height: $height;
-      color: inherit;
-      text-transform: lowercase;
+  a {
+    display: block;
+    padding: 0 15px;
+    line-height: $height;
+    color: inherit;
+    white-space: nowrap;
 
-      &:hover {
-        background: $primary;
-        text-decoration: none;
-        color: $white;
-      }
+    &:hover {
+      background: $primary;
+      text-decoration: none;
+      color: $white;
+    }
+  }
+
+  .dropdown-menu {
+    border: 0;
+    background: $gray-900;
+    color: $gray-400;
+    margin-top: 0;
+
+    .dropdown-header {
+      padding: 0.5rem 1rem;
+      text-transform: uppercase;
     }
   }
 
